--- a/src/index.css
+++ b/src/index.css
@@ -32,8 +32,7 @@
 
 html, body, #root {
   width: 100%;
-  height: 100%;
-  overflow: hidden;
+  min-height: 100%;
 }
 
 body {
